[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cave_api"
version = "0.0.1"
description = "Python wrapper for api use in the cave_app"
authors = [
    {name="Connor Makowski", email="conmak@mit.edu"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mit-cave/cave_app/cave_api"
"Bug Tracker" = "https://github.com/mit-cave/cave_app/issues"
